--- a/MediPrep/src/resources/style.css
+++ b/MediPrep/src/resources/style.css
@@ -29,3 +29,8 @@
 #default-button Text {
     -fx-effect: dropshadow( one-pass-box , rgba(255,255,255,0.5) , 0, 0.0 , 0 , 1);
 }
+
+.error-label
+{
+    -fx-text-fill: red;
+}
