--- a/MediPrep/src/ui/main.fxml
+++ b/MediPrep/src/ui/main.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.*?>
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?scenebuilder-stylesheet vista.css?>
 
 <!--
@@ -18,6 +13,10 @@
  * @version 26.03.2015
 -->
 
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import java.net.URL?>
 <AnchorPane minHeight="880.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.MainController">
     <children>
       <AnchorPane fx:id="navigationHolderPane" maxHeight="165.0" minHeight="85.0" prefHeight="85.0" prefWidth="823.0" style="-fx-background-color: lightgrey;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -28,7 +27,7 @@
                         <graphic>
                             <ImageView>
                                <image>
-                                   <Image url="@../../resources/image/logout.png" />
+                                   <Image url="@/image/logout.png" />
                                </image>
                             </ImageView>
                         </graphic>
@@ -39,7 +38,7 @@
             
                   <ImageView fitHeight="63.0" fitWidth="60.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="9.0" AnchorPane.topAnchor="8.0">
                      <image>
-                        <Image fx:id="imgProfilePicture" url="@../../resources/image/Profilbild.png" />
+                        <Image fx:id="imgProfilePicture" url="@/image/Profilbild.png" />
                      </image>
                   </ImageView>
                   <Label layoutX="248.0" layoutY="60.0" text="Aktueller Patient:" />
@@ -56,7 +55,7 @@
                      <graphic>
                         <ImageView fitHeight="55.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../resources/image/man369.png" />
+                              <Image url="@/image/man369.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -65,7 +64,7 @@
                      <graphic>
                         <ImageView fx:id="btnAdditionalMedics" fitHeight="59.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../resources/image/medical4.png" />
+                              <Image url="@/image/medical4.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -74,7 +73,7 @@
                      <graphic>
                         <ImageView fitHeight="63.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../resources/image/medicine.png" />
+                              <Image url="@/image/medicine.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -83,7 +82,7 @@
                      <graphic>
                         <ImageView fitHeight="70.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../resources/image/magnifier13.png" />
+                              <Image url="@/image/magnifier13.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -92,7 +91,7 @@
                      <graphic>
                         <ImageView fitHeight="36.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../resources/image/settings48.png" />
+                              <Image url="@/image/settings48.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -117,3 +116,5 @@
         <URL value="@../resources/style.css" />
     </stylesheets>
 </AnchorPane>
+
+
