--- a/MediPrep/src/ui/AdditionalMedicView.fxml
+++ b/MediPrep/src/ui/AdditionalMedicView.fxml
@@ -94,12 +94,14 @@
                   <Label fx:id="lblPatInfo" layoutX="165.0" layoutY="48.0" text="Infos:" />
                      </children>
                   </Pane>
-                  <TableView fx:id="preparedMedicationTableView" layoutX="573.0" layoutY="294.0" prefHeight="440.0" prefWidth="392.0" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="295.0" />
+                  <TableView fx:id="preparedMedicationTableView" layoutX="573.0" layoutY="294.0" prefHeight="405.0" prefWidth="392.0" AnchorPane.bottomAnchor="55.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="295.0" />
             <Label layoutX="22.0" layoutY="274.0" text="Verordnungen" />
             <Label layoutX="21.0" layoutY="538.0" text="Reserve" />
             <TableView fx:id="prescriptionTableViewReserve" layoutX="22.0" layoutY="563.0" prefHeight="172.0" prefWidth="548.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="407.0" AnchorPane.topAnchor="563.0" />
             <TableView fx:id="prescriptionTableView" layoutX="20.0" layoutY="295.0" prefHeight="236.0" prefWidth="548.0" AnchorPane.bottomAnchor="224.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="407.0" AnchorPane.topAnchor="295.0" />
             <Label layoutX="578.0" layoutY="274.0" text="Medikamente" AnchorPane.bottomAnchor="465.0" AnchorPane.rightAnchor="316.0" />
+            <Button fx:id="addButton" defaultButton="true" layoutX="872.0" layoutY="709.0" mnemonicParsing="false" onAction="#evaluateCode" prefHeight="26.0" prefWidth="91.0" text="Erfassen" />
+            <TextField fx:id="txtBarcode" layoutX="573.0" layoutY="709.0" prefHeight="26.0" prefWidth="292.0" />
                </children>
         </AnchorPane>
     </children>
